// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Extensions [production] bud.extensions.repository matches snapshot 1`] = `
Object {
  "clean-webpack-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "clean-webpack-plugin",
      "options": Object {
        "cleanOnceBeforeBuildPatterns": Array [
          "**/*",
          "!dll",
        ],
        "cleanStaleWebpackAssets": true,
        "protectWebpackAssets": true,
      },
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "copy-webpack-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "copy-webpack-plugin",
      "options": Object {
        "patterns": Array [],
      },
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "ignore-emit-webpack-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "ignore-emit-webpack-plugin",
      "options": Object {
        "ignore": Array [
          /\\.\\?\\.map\\$/,
        ],
      },
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "mini-css-extract-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "mini-css-extract-plugin",
      "options": Object {
        "chunkFilename": "[name].css",
        "filename": "[name].css",
      },
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "webpack-define-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "webpack-define-plugin",
      "options": Object {},
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "webpack-hot-module-replacement-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "webpack-hot-module-replacement-plugin",
      "options": Container {
        "ident": "container",
        "repository": Object {},
      },
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "webpack-manifest-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "webpack-manifest-plugin",
      "options": Object {
        "fileName": "manifest.json",
        "writeToFileEmit": true,
      },
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "webpack-provide-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "webpack-provide-plugin",
      "options": Object {},
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 2`] = `
Container {
  "ident": "container",
  "repository": Object {},
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 3`] = `
Container {
  "ident": "container",
  "repository": Object {
    "cleanOnceBeforeBuildPatterns": Array [
      "**/*",
      "!dll",
    ],
    "cleanStaleWebpackAssets": true,
    "protectWebpackAssets": true,
  },
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 4`] = `
Container {
  "ident": "container",
  "repository": Object {
    "patterns": Array [],
  },
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 5`] = `
Container {
  "ident": "container",
  "repository": Object {},
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 6`] = `
Container {
  "ident": "container",
  "repository": Object {},
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 7`] = `
Container {
  "ident": "container",
  "repository": Object {
    "ignore": Array [
      /\\.\\?\\.map\\$/,
    ],
  },
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 8`] = `
Container {
  "ident": "container",
  "repository": Object {
    "fileName": "manifest.json",
    "writeToFileEmit": true,
  },
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 9`] = `
Container {
  "ident": "container",
  "repository": Object {
    "chunkFilename": "[name].css",
    "filename": "[name].css",
  },
}
`;
